# Problem2

./: .gitignore  .gitmodules  DEV_README.md  MasterModel.lp  README.md  SubModel.lp  alns_after_fix.prof  alns_after_opt.prof  alns_prof.prof  alns_prof_after.prof  benchmark_results.txt  benchmark_validate_results.txt  conftest.py  debug_inventory_output.txt  main.py  params_config.py  profile.prof  profile_after.prof  profile_regret_opt.prof  profile_regret_opt2.prof  profile_reports_off.prof  profile_reports_opt.prof  pyproject.toml  pytest.ini  pytest_output.txt  real_benchmark_output.txt  real_benchmark_results.txt  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
ALNS/: pyproject.toml
ALNS-Learn/: TSP.py  csp.py  knapsack.py  tsp_csv.py
ALNSCode/: InputDataALNS.py  OutputDataALNS.py  __init__.py  accept.py  alns_config.py  alns_optimizer.py  alnsopt.py  alnstrack.py  check_solution.py  combined_stopping.py  destroy_operators.py  destroy_utils.py  initial_solution_utils.py  inventory_numba.py  inventory_utils.py  main.py  ml_destroy_selection.py  ml_operator_selector.py  ml_repair_selection.py  optutility.py  param_tuner.py  repair_operators.py  repair_utils.py  vehicle.py  visualization.py
CGcode/: InputDataCG.py  OPTLogicCG.py  SubModel.lp  masterModel.py  optutility.py  subModel.py
CGcodeWrong/: InputDataCG.py  MasterModel.lp  OPTCG.py  OPTLogicCG.py  SubModel.lp  masterModel.py  subModel.py  test.ipynb  vehicle.py
alns-backup/: accept.py  alns_config.py  alnsopt.py  alnstrack.py  check_solution.py  initial_solution_utils.py  (+4 more)
(+978 files in other folders)
